Added ic classes for icons

--- a/front-end/Assets/src/css/modules/_resource-center.scss
+++ b/front-end/Assets/src/css/modules/_resource-center.scss
@@ -701,6 +701,18 @@ body.no-scroll{
   .ic_trial-white {
     background-image: url("#{$imagesFolder}icon-interactive-white.png");
   }
+  .ic_advisory {
+    background-image: url("#{$imagesFolder}icon-interactive.png");
+  }
+  .ic_deploy {
+    background-image: url("#{$imagesFolder}icon-interactive.png");
+  }
+  .ic_technical {
+    background-image: url("#{$imagesFolder}icon-interactive.png");
+  }
+  .ic_education {
+    background-image: url("#{$imagesFolder}icon-interactive.png");
+  }
 
 }
 
