--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/external-link-document/body.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/external-link-document/body.html
@@ -60,10 +60,10 @@
 
 								<div class="flex-item col col-12">                                	
                                         <div data-sly-test="${isdocumentPDF}" class="docContainerWrap" id="pdfReader" style="height: 530px; border: 1px solid black; width: 100%;">
-                                            <embed src="${documentLink}" type="application/pdf" style="width: 100%; height:100%;"/>
+                                            <iframe src="${documentLink}" type="application/pdf" style="width: 100%; height:100%;"> </iframe>
                                         </div>                                   
                                       	<div data-sly-test="${!isdocumentPDF}" class="docContainerWrap" id="doc-iframe-container" >
-               								<iframe src="${documentLink}" type="application/pdf" style="width: 100%; height:100%;"> </iframe>
+               								<iframe src="${documentLink}" style="width: 100%; height:100%;"> </iframe>
             							</div>
 								</div>
 							</div>
