--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/external-link-document/body.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/external-link-document/body.html
@@ -60,7 +60,7 @@
 
 								<div class="flex-item col col-12">                                	
                                         <div data-sly-test="${isdocumentPDF}" class="docContainerWrap" id="pdfReader" style="height: 530px; border: 1px solid black; width: 100%;">
-                                            <iframe src="${documentLink}" type="application/pdf" style="width: 100%; height:100%;"> </iframe>
+                                            <embed src="${documentLink}" type="application/pdf" style="width: 100%; height:100%;"/>
                                         </div>                                   
                                       	<div data-sly-test="${!isdocumentPDF}" class="docContainerWrap" id="doc-iframe-container" >
                								<iframe src="${documentLink}" style="width: 100%; height:100%;"> </iframe>
@@ -78,7 +78,7 @@
                  }
                  
                  var windowHeight = getAvailableHeight();
-                 document.getElementsByClassName("docContainerWrap")[0].style.height = (windowHeight - 80) + "px";
+                 document.getElementsById("pdfReader").style.height = (windowHeight - 80) + "px";
 
       		</script>    
 		 </div>
