Added condition for header image

--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-center/resource-center-results/modules/resultItemsTemplate.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-center/resource-center-results/modules/resultItemsTemplate.html
@@ -3,7 +3,7 @@
         {{#each items}}
         <div class="rc-card-col">
             <a class="{{isVideoModal assetLink}}" target="{{addTarget assetLink}}" href="{{assetLink}}" {{{analyticsAttributes}}}>
-                <div class="simple-card bg-white">
+                <div class="simple-card bg-white {{#if headerImage}} card-with-header{{/if}}">
                     <!-- WEB-6793 Added new fields for RC Cards START -->
                     <div class="card-header" style="{{#if headerImage}}margin-top:107px;{{/if}}">
                         <h4>{{type}}</h4>
