WEB-9846 FIxed Product card UI issues.

--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/product-cards/product-cards.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/product-cards/product-cards.html
@@ -5,17 +5,19 @@
 			<h2 class="h2-variation-1">${properties.title @ context='html'}</h2>
 			<h3 >${properties.subTitle @ context='html'}</h3>
 		</div>
-		<div class="flex-wrap flex-justify-center mb2">
-            <!--/*  WEB-8367 Added Fix for Card layout in Landscape  */-->
+        <!--/*  WEB-8367 Added Fix for Card layout in Landscape  */-->
 			<sly data-sly-test.assetClass="col col-12 sm-col-6 md-col-6 lg-col-3"></sly>
 			<sly data-sly-test="${properties.numberOfCards == '3'}">
-				<sly data-sly-test.assetClass="col-12 sm-col sm-col-6 md-col-4 lg-col-3"></sly>
+				<sly data-sly-test.assetClass="col-12 sm-col sm-col-6 md-col-4 lg-col-4"></sly>
+                <sly data-sly-test.containerClass="small-container"></sly>
 			</sly>
 			<sly data-sly-test="${properties.numberOfCards == '4'}">
-				<sly data-sly-test.assetClass="col col-12 sm-col-6 md-col-6 lg-col-3"></sly>
+				<sly data-sly-test.assetClass="col col-12 sm-col-6 md-col-3 lg-col-3"></sly>
 			</sly>
+        <div class="${containerClass}">
+		<div class="flex-wrap flex-justify-center mb2">
 			<!--/*  Iterate through the cards for the multifield and fetch page properties  */-->
-			<sly data-sly-list.card="${productSet.productCards}">
+			<sly data-sly-list.card="${productSet.productCards}">            
 				<div class="flex flex-item ${assetClass}">
 					<sly data-sly-use.productLink="${'com.bmc.components.utils.LinkGenerator' @ urlPath=card.pagePath}"></sly>
 					<sly data-sly-test="${productLink.href}">
@@ -48,6 +50,6 @@
 					</a>
 				</div>
 			</sly>
-		</div>
+		</div></div>
 	</div>
 </section>
