Changes made to Scroll Bar Track Color change

--- a/front-end/Assets/src/css/base/defaults/_root.scss
+++ b/front-end/Assets/src/css/base/defaults/_root.scss
@@ -2,6 +2,9 @@ html {
 	font: #{$baseFontPercentage}/#{$baseLineHeight} $baseFontFamily;
 	font-weight: $baseFontWeight;
 }
+*{
+	scrollbar-color: #cdcdcd #f0f0f0;
+  }
 
 body {
 	background: color(colorCorporate);
