WEB-10111 : Fixed .0 issue in service credits

--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-center/resource-center-results/modules/resultItemsTemplate.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-center/resource-center-results/modules/resultItemsTemplate.html
@@ -41,7 +41,7 @@
 	                                {{/ifCond}}
 	
 	                                {{#if serviceCredits}}
-	                                <span>{{serviceCredits}} Credits</span>
+	                                    <span>{{displayCredits serviceCredits}}</span>
 	                                {{else}}
 	                                {{#if footerLogo}}
 	                                {{#ifCond type '===' "Video"}}
