Fixed featured card issue for IE

--- a/front-end/Assets/src/css/modules/_resource-center.scss
+++ b/front-end/Assets/src/css/modules/_resource-center.scss
@@ -360,6 +360,10 @@ body.no-scroll{
         display: none;
       }
     }
+    @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+      flex-basis: auto;
+      width: 100%;
+    }
   }
 
   .rc-card-col {
