Code Cleanup post  Youtube Video Overlay CTA Feature being removed

--- a/front-end/Assets/src/css/modules/_youtube.scss
+++ b/front-end/Assets/src/css/modules/_youtube.scss
@@ -11,6 +11,8 @@
   background-color: black;
   height:100%;
   
+  /* WEB-10377 - Commented after the feature is depricated
+  
   .youtubeOverlay{
     background:rgba(0, 0, 0, 0.95) ;
     padding: 5px;
@@ -34,5 +36,5 @@
       bottom: 35%;
       padding: 20px; 
     }
-  }
+  }*/
 }
