--- a/front-end/Assets/src/css/modules/_resource-center.scss
+++ b/front-end/Assets/src/css/modules/_resource-center.scss
@@ -429,8 +429,8 @@ body.no-scroll{
         background-repeat: no-repeat;
         background-size: 100%;
         float: right;
-        width: 35px;
-        height: 50px;
+        width: 40px;
+        height: 40px;
       }
       .card-thumbnail{
         height: 110px;
@@ -452,6 +452,7 @@ body.no-scroll{
         word-break: break-word;
         font-size: 18px;
         display: block;
+        margin-bottom: 5px;
              
         @supports (-webkit-line-clamp: 1) { 
           display: -webkit-box;
