Revert "Test : Removed all three cases of Bottom Padding"
This reverts commit 355e756862ac71db7183141e78f67a14b76af235.

--- a/front-end/Assets/src/css/layout/_content.scss
+++ b/front-end/Assets/src/css/layout/_content.scss
@@ -966,7 +966,7 @@
 			}
 		}
 
-		/*> *:last-child:not(.cmp-breadcrumb) {
+		> *:last-child:not(.cmp-breadcrumb) {
 			padding-bottom: rem(30);
 			@include media(breakpointLarge) {
 				padding-bottom: rem(60);
@@ -979,7 +979,7 @@
 		> .aem-Grid-newComponent:last-child {
 			padding-bottom: 0;
 			margin-bottom: 0;
-		}*/
+		}
 	}
 }
 
