WEB - 10772 Fixed the syntax Error on DCs

--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/external-link-document/body.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/external-link-document/body.html
@@ -80,9 +80,9 @@
                  }
                  
                  var windowHeight = getAvailableHeight();
-                 <!--/* WEB - 10035 Start */-->
-                 document.getElementsById("pdfReader").style.height = (windowHeight - 80) + "px";
-                 <!--/* WEB - 10035 End */-->
+                 <!--/* WEB - 10772 Fixed the syntax Error on DCs START */-->
+                 document.getElementById("pdfReader").style.height = (windowHeight - 80) + "px";
+                 <!--/* WEB - 10772 End */-->
       		</script>    
 		 </div>
 		</div>
