--- a/front-end/Assets/src/css/modules/_resource-center.scss
+++ b/front-end/Assets/src/css/modules/_resource-center.scss
@@ -654,12 +654,16 @@ body.no-scroll{
           margin-left: 6px;          
         }
       } 
-      .card-thumbnail-logo {
-        display: flex;
-        justify-content: center;
+      .card-thumbnail-logo {       
         img{
-          align-self: center;
           max-height: 100%;
+          display: block;
+          margin: auto;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          max-width: calc(100% - 20px);
         }
       }     
   }
