WEB-10146 ADded not null to avoid check for non PDFs

--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/external-link-document/body.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/external-link-document/body.html
@@ -81,7 +81,9 @@
                  
                  var windowHeight = getAvailableHeight();
                  <!--/* WEB - 10772 Fixed the syntax Error on DCs START */-->
-                 document.getElementById("pdfReader").style.height = (windowHeight - 80) + "px";
+                 if(document.getElementById("pdfReader")){
+                 	document.getElementById("pdfReader").style.height = (windowHeight - 80) + "px";
+                 }
                  <!--/* WEB - 10772 End */-->
       		</script>    
 		 </div>
