Featured card header icon css update

--- a/front-end/Assets/src/css/modules/_resource-center.scss
+++ b/front-end/Assets/src/css/modules/_resource-center.scss
@@ -700,6 +700,9 @@ body.no-scroll{
       h3{
         padding-top: 2.25rem;
       }
+      .card-icon{
+        background-size: contain;
+      }
     }
     .featured-card-footer{
       svg{
